k8s/infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retail-store-ns
  labels:
    name: retail-store-ns
